apps/monitoring/prometheus/etcdDiscoveryService.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  labels:
    app: kube-etcd
    k8s-app: etcd-server
  name: kube-etcd
  namespace: kube-system
subsets:
- addresses:
  - ip: 192.168.1.21
    nodeName: 192.168.1.21
  - ip: 192.168.1.22
    nodeName: 192.168.1.22
  - ip: 192.168.1.23
    nodeName: 192.168.1.23
  ports:
  - name: http-metrics
    port: 2379
    protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kube-etcd
    jobLabel: kube-etcd
  name: kube-etcd
  namespace: kube-system
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: http-metrics
    port: 2379
    protocol: TCP
  selector:
    k8s-app: etcd-server
