apps/monitoring/prometheus/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx-internal
    certmanager.k8s.io/cluster-issuer: "internal"
    prometheus.io/probe: "true"
spec:
  tls:
  - hosts:
    - prometheus.k8s.grigri
    secretName: prometheus-tls
  rules:
  - host: prometheus.k8s.grigri
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus
          servicePort: webui
